--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+title: [My Awesome Inc. Blog]
+description: [This blog is meant show a bit about me and what I am working on at Awesome Inc. Bootcamp.]
