--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [My Awesome Inc. Blog]
+title: [My Awesome Inc. Blog
+![My Family](img/my-family.JPG)]
 description: [This blog is meant show a bit about me and what I am working on at Awesome Inc. Bootcamp.]
