--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 title: [My Awesome Inc. Blog]
-description: [This blog is meant show a bit about me and what I am working on at Awesome Inc. Bootcamp.]
+description: [This blog is meant show a bit about me and what I am working on at Awesome Inc. Bootcamp. My first project can be found here: https://kumarg23.github.io/]
